[package]
name = "tools"
version = "1.0.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
itertools = "=0.11.0"
proconio = { version = "=0.4.5", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

svg = "0.17.0"
clap = { version = "4.3.19", features = ["derive"] }
noise = "0.9.0"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[lib]
crate-type = ["cdylib", "rlib"]